# EinsteinDB

./: README.md
allegro_poset/: causet_locale.rs  convert.rs  datum.rs  lib.rs  lightlike_upsert.rs  mod.rs  spacetime.rs  sync.rs  types.rs
berolinasql/: Cargo.toml
berolinasql/src/: binary_literal.rs  comparison.rs  decimal.rs  duration.rs  json_modify.rs  mod.rs  overflow.rs  path_expr.rs  table.rs
causet/causetq-allegrosql/: Cargo.toml  errors.rs  fulltext.rs  ground.rs  lib.rs
causet/causetq-timelike_distance/: Cargo.toml
causet/causetq-timelike_distance-promises/: Cargo.toml  lib.rs
causet/causetq-timelike_distance/src/: lib.rs  translate.rs
causet/src/: causet.rs  causet_of_causets.rs  eval_type.rs  field_type.rs  io_limiter.rs  lib.rs  main.rs
causetq/: Cargo.toml
causetq/src/: ctx.rs  debug.rs  dedup.rs  internal_types.rs  lib.rs  scalar.rs  tx_observer.rs  upsert_resolution.rs
causets/: causet_partitioner.rs  error.rs  mod.rs  query_builder.rs
causets/sentinel2conics/: metareticulate.rs  sentinel.rs
core/: Cargo.toml
core/src/: add_retract_alter_set.rs  bootstrap.rs  cache.rs  debug.rs  edb.rs  internal_types.rs  lib.rs  lightlike.rs  schema.rs  spacetime.rs  tx.rs  tx_observer.rs  types.rs  upsert_resolution.rs  watcher.rs
docker/: Dockerfile
edb/LSH-Tree/backup/: Cargo.toml
edb/LSH-Tree/backup/tests/integrations/: test_backup.rs
edb/LSH-Tree/batch_system/src/: batch.rs  config.rs  fsm.rs  lib.rs  mailbox.rs  router.rs
edb/LSH-Tree/causet_context/src/: lib.rs  node.rs  pushdown.rs
edb/LSH-Tree/causet_storage/examples/: scli.rs
edb/LSH-Tree/causet_storage/src/: Cargo.toml  lib.rs  s3.rs  sst.rs
edb/LSH-Tree/embedded_lmdb/src/: config.rs  lib.rs  snapshot.rs  sst.rs  table_properties.rs
edb/LSH-Tree/embedded_panic/: Cargo.toml
edb/LSH-Tree/embedded_panic/src/: import.rs  lib.rs
edb/LSH-Tree/embedded_promises/: Cargo.toml
edb/LSH-Tree/match_template/: Cargo.toml
edb/LSH-Tree/src/: endpoint.rs  lib.rs  pull.rs
edb/LSH-Tree/sst_importer/: Cargo.toml
edb/LSH-Tree/sst_importer/src/: config.rs  errors.rs  import_mode.rs  lib.rs  sst_importer.rs  util.rs
edb/LSH-Tree/test_fidel/: Cargo.toml
edb/LSH-Tree/test_fidel/src/: util.rs
edb/LSH-Tree/test_fidel/src/mocker/: bootstrap.rs  incompatible.rs  leader_change.rs
edb/LSH-Tree/violetabft_log_engine/: Cargo.toml
edb/edbn/: Cargo.toml
edb/edbn/edbn-promises/: errors.rs  lib.rs
edb/edbn/einsteindb_alloc/src/: error.rs  jemalloc.rs  lib.rs  mimalloc.rs  system.rs  tcmalloc.rs
edb/edbn/einsteindb_util/: Cargo.toml
edb/edbn/einsteindb_util/src/sys/: cgroup.rs
edb/embedded-promises/: Cargo.toml  lib.rs  value_type_set.rs  values.rs
edb/etc/: cargo.config.dist  config-template.toml
edb/import/: mod.rs
edb/lenin/fidel_client/: Cargo.toml
edb/lenin/fidel_client/src/: client.rs  config.rs  lib.rs  metrics.rs
edb/lenin/fidelpb_helper/: Cargo.toml
edb/lenin/lenin-promises/: Cargo.toml
edb/lenin/src/: causets.rs  debug.rs  syncer.rs
edb/milevadb_query/milevadb_query_common/src/: execute_stats.rs
edb/milevadb_query/milevadb_query_common/src/storage/: mod.rs  ranges_iter.rs  scanner.rs
edb/milevadb_query/milevadb_query_normal_executors/src/: aggregation.rs  index_scan.rs  lib.rs  limit.rs  runner.rs  scan.rs  selection.rs  table_scan.rs  topn.rs
edb/milevadb_query/milevadb_query_normal_expr/src/: builtin_time.rs
edb/milevadb_query/milevadb_query_vec_executors/src/: fast_hash_aggr_executor.rs  index_scan_executor.rs  interface.rs  limit_executor.rs  runner.rs  selection_executor.rs  simple_aggr_executor.rs  slow_hash_aggr_executor.rs  stream_aggr_executor.rs  table_scan_executor.rs  top_n_executor.rs
edb/milevadb_query/milevadb_query_vec_executors/src/util/: aggr_executor.rs  hash_aggr_helper.rs  mock_executor.rs  scan_executor.rs
edb/milevadb_query/milevadb_query_vec_expr/src/: impl_time.rs
edb/raum/src/: raum.rs
einstein_db/src/: causetids.rs  conn.rs  einstein_merkle_trees.rs  einsteindb.rs  mod.rs
einstein_db_alexandrov_processing/: lib.rs  perf_context.rs
einstein_ml/: einstein_ml_stdout.rs  isolated_namespace.rs  lib.rs  matcher.rs  query.rs  value_rc.rs
einsteindb-server/src/: main.rs  shellings.rs  utils.rs
fdb_traits/: Cargo.toml
fdb_traits/src/: encryption.rs  errors.rs  fdb.rs  fdb_traits.rs  schema.rs  vocabulary.rs
interlock/: checksum.rs  error.rs
interlock/posetdag/: causetStorage_impl.rs  concurrency_limiter.rs
interlock/sentinels/: mod.rs  tracker.rs
interlock/statistics/: analyze.rs
sentry/einst_util/data_types/: causets.rs  intern_set.rs  lib.rs  query.rs
sentry/einst_util/data_types/gerund/: mod.rs  pattern.rs
sentry/einst_util/src/: db_meta.rs
soliton/: cache.rs  cc_checking.rs  config.rs  discrete_morse.rs  read_pool.rs  watcher.rs
soliton_panic/src/: table_properties.rs
src/: CausetSquuid.rs  causet_closed_timeline.rs  config.rs  encoder.rs  lib.rs
tests/benches/interlock_executors/index_scan/: mod.rs  util.rs
tests/benches/interlock_executors/table_scan/: mod.rs  util.rs
tests/benches/interlock_executors/util/: fixture.rs
tests/failpoints/cases/: test_gc_worker.rs
tests/integrations/interlock/: test_checksum.rs
tests/integrations/storage/: test_titan.rs
violetabftstore/src/interlock/: mod.rs
violetabftstore/src/store/: snap.rs
violetabftstore/src/store/worker/: split_check.rs
zetareticulate/: Cargo.toml  cosine.rs  reticulate.rs  zeta.rs
zetareticulate/causetq_origin/: causet_query_node.rs  dataformat.rs  datapoint.rs  scanner.rs  scannerq_py.rs
zetareticulate/framestl/: causetq-index.rs  chunksgarbled.rs  kernels.rs  mutator.rs  resources.rs
zetareticulate/oss_wrappers/: advertise.rs  bitop.rs  serialize.rs
zetareticulate/timelike/: fanout.rs  metric.rs  timelike.rs
zetareticulate/zeta_ops/: asymmetric.rs  einsteindb-kmeans.rs  learning.rs  leeper.rs  training.rs
