[package]
name = "causetq"
version = "0.1.0"
edition = "2021"
description = "A simple, fast, and efficient queue for causetq allegro lisp library"
license = "MIT"
readme = "README.md"



[dependencies]
einstein = {path="../einstein"}
slog = "1.0.1138"
einstein_db= {path="../einstein_db"}
einstein_db_ctl = {path="../einstein_db_ctl"}
einstein_ml = {path="../einstein_ml"}


[lib]
crate-type = ["cdylib"]

[workspace]
members = ["einstein_db", "einstein_db_ctl", "einstein_ml"]


