[package]
name = "einsteindb_core"
version = "0.0.1"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.7"
failure = "0.1.1"
indexmap = "1"
ordered-float = { version = "0.5", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
quickcheck = "0.8"
rand = "0.6"
serde_test = "1.0"
