[package]
name = "causetq_allegrosql"
version = "0.1.0"
authors = ["EinstAI Inc, Zeta Reticula Inc "]
edition = "2018"



[lib]
name = "causetq_allegrosql"
path = "lib.rs"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
causetq = { path = "../causetq" }
causetq_allegrosql = { path = "../causetq_allegrosql" }
causetq_allegrosql_promises = { path = "../causetq_allegrosql_promises" }

[features]
default = ["causetq_allegrosql"]