[package]
name = "causetq_projector_promises"
version = "0.0.1"
workspace = "../../.."
edition = "2018"





[lib]
name = "causetq_projector_promises"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]





[features]
sqlcipher = ["rusqlite/sqlcipher"]
sqlcipher_vfs = ["rusqlite/sqlcipher", "rusqlite/sqlcipher_vfs"]


[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
edbn = { path = "../edbn" }
allegrosql_promises = { path = "../allegro-promises" }
causetq_pull_promises = { path = "../causetq-pull-promises" }
edb_causetq_parityfilter = { path = "../causetq-parityfilter" }
edb_causetq_sql = { path = "../causetq-allegrosql" }

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.causetq_allegrosql]
path = "../allegro"

[dependencies.edb_causetq_projector]
path = "../causetq-projector"

[dependencies.edbn]
path = "../edbn"

[dependencies.allegrosql_promises]
path = "../allegro-promises"


[dependencies.causetq_promises]
path = "../causetq-promises"


[dependencies.causetq_pull_promises]
path = "../causetq-pull-promises"

[dependencies.edb_causetq_parityfilter]
path = "../causetq-parityfilter"

[dependencies.edb_causetq_sql]
path = "../causetq-allegrosql"

[dev-dependencies.causetq_allegrosql]
path = "../allegro"

[dev-dependencies.edb_causetq_projector]
path = "../causetq-projector"
