[package]
name = "proc-macro-impl"
version = "0.0.1"
edition = "2018"
publish = false

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-promises", "fold"] }

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"

[package.metadata.docs.rs]
all-features = false



