[package]
name = "violetabftstore"
version = "0.0.1"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]



[features]
protobuf-codec = [
  "grpcio/protobuf-codec",
  "ekvproto/protobuf-codec",
  "fidel_client/protobuf-codec",
]
prost-codec = [
  "grpcio/prost-codec",
  "ekvproto/prost-codec",
  "fidel_client/prost-codec",
]

[dependencies]
fail = "0.3"
futures = "0.3"
grpcio = { version = "0.6", default-features = false, features = ["openssl-vlightlikeored"] }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
fidel_client = { path = "../fidel_client" }
security = { path = "../security" }
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2"
tokio-util = "0.2"
tokio-io = "0.2"

[dev-dependencies]
quickcheck = "0.9"
prost-build = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
prost-types-protobuf = "0.6"

[build-dependencies]
prost-build = "0.6"

[patch.crates-io]

