[package]
name = "fidel_timeshare_helper"
description = "Fidel Timeshare Helper"
version = "0.0.1"
authors = ["ZetaReticula"]
edition = "2018"
publish = false

[features]
protobuf-codec = [
  "milevadb_query_datatype/protobuf-codec",
  "fidel_timeshare/protobuf-codec"

]
prost-codec = [
  "milevadb_query_datatype/prost-codec",
  "fidel_timeshare/prost-codec"
]

[dependencies]
codec = { path = "../codec" }
milevadb_query_datatype = { path = "../milevadb_query_datatype" }
fidel_timeshare = { git = "https://github.com/whtcorpsinc/fidel_timeshare.git", default-features = false }
prost = { version = "0.7", default-features = false }
prost-types = { version = "0.7", default-features = false }
prost-derive = { version = "0.7", default-features = false }
prost-build = { version = "0.7", default-features = false }



[build-dependencies]
prost-build = { version = "0.7", default-features = false }



