[package]
name = "lenin_promises"
version = "0.0.1"
workspace = ".."
edition = "2018"


[lib]
name = "lenin_promises"
path = "lib.rs"

    [[bin]]
    name = "lenin"
    path = "src/main.rs"

    [[bin]]
    name = "lenin-server"
    path = "src/server.rs"

    [[bin]]
    name = "lenin-client"



[features]
sqlcipher = ["rusqlite/sqlcipher"]
default = ["rusqlite/default"]



[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.11"
serde_json = "1.0"
uuid = { version = "0.5" }
url = "1.7"
causetq = { path = "../edb" }
causetq_pull = { path = "../edb-pull" }
causetq_promises = { path = "../edb-promises" }
causetq_pull_promises = { path = "../edb-promises" }



[dependencies.causetq_pull_promises]
path = "../edb-promises"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
